# orchestrator

src/orchestration/examples/grpc_lifecycle/: Cargo.toml  README.md  build.rs
src/orchestration/examples/grpc_lifecycle/docs/: grpc_lifecycle_architecture.drawio  manager_dataflow.drawio  server_manager_end_to_end.drawio
src/orchestration/examples/grpc_lifecycle/src/: client.rs  manager.rs  server_kyron.rs
src/orchestration/examples/grpc_lifecycle/test_bins/: counter_with_state.rs  counter_with_state_elf
