[package]
name = "grpc_lifecycle"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lifecycle_server"
path = "src/server_kyron.rs"

[[bin]]
name = "lifecycle_client"
path = "src/client.rs"

[dependencies]
kyron.workspace = true
logging_tracing.workspace = true

nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
